# fast_api_study

./: .gitignore  README.md
01_basic/: notebook.ipynb
example/: pyproject.toml
fast_zero/: pyproject.toml
fast_zero/fast_zero/: app.py  models.py  schemas.py
fast_zero/fast_zero/templates/: index.html
fast_zero/migrations/: env.py
fast_zero/migrations/versions/: 2072a73415bf_create_users_table.py  ec6bd0244712_add_updated_at_column_to_users_table.py
fast_zero/tests/: conftest.py  test_app.py  test_db.py  test_security.py
fastapi-the-complete-course/: .gitignore
fastapi-the-complete-course/project1/: pyproject.toml
fastapi-the-complete-course/project2/: pyproject.toml
fastapi-the-complete-course/project3/TodoApp/: Makefile  README.md  alembic.ini  main.py  pyproject.toml
fastapi-the-complete-course/project3/TodoApp/alembic/: env.py
fastapi-the-complete-course/project3/TodoApp/alembic/versions/: 9d6bb04efb9d_create_phone_number_for_user_column.py
fastapi-the-complete-course/project3/TodoApp/app/: app.py  database.py
fastapi-the-complete-course/project3/TodoApp/app/routers/: admin.py  auth.py  todos.py  users.py
fastapi-the-complete-course/project3/TodoApp/test/: test_admin.py  test_auth.py  test_example.py  test_main.py  test_todos.py  test_user.py  utils.py
fastapi-the-complete-course/project5/TodoApp/: README.md  pyproject.toml
fastapi-the-complete-course/uv_teste/my-project/: main.py  pyproject.toml
